--- a/Relatorio/.settings/org.eclipse.core.resources.prefs
+++ b/Relatorio/.settings/org.eclipse.core.resources.prefs
@@ -2,10 +2,12 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/java/com/intersys/sistema/relatorio_pedido.jrxml=UTF-8
 encoding//src/main/java/com/intersys/sistema/sge_Cliente.jrxml=UTF-8
+encoding//src/main/java/com/intersys/sistema/sge_relatorio2_subreport1.jrxml=UTF-8
 encoding//src/main/java/com/intersys/sistema/sge_relatorio_av.jrxml=UTF-8
 encoding//src/main/java/com/intersys/sistema/sge_relatorio_chavetipo.jrxml=UTF-8
 encoding//src/main/java/com/intersys/sistema/sge_relatorio_empres_nome.jrxml=UTF-8
 encoding//src/main/java/com/intersys/sistema/sge_relatorio_vencimento.jrxml=UTF-8
+encoding//src/main/java/com/intersys/sistema/sge_relatorio_vias.jrxml=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
